(lang dune 2.8)
(name prbnmcn-ucb1)
(version 0.0.2)
(generate_opam_files true)
(source (uri git+https://github.com/igarnier/prbnmcn-ucb1))
(bug_reports http://github.com/igarnier/prbnmcn-ucb1)
(license MIT)
(authors "Ilias Garnier")
(maintainers igarnier@protonmail.com)
(package (name prbnmcn-ucb1)
  (synopsis "UCB1 algorithm for multi-armed bandits")
  (description "UCB1 algorithm for multi-armed bandits")
  (depends (ocaml (>= 4.08.0)) (alcotest (and (>= 1.4.0) :with-test)))
)
(homepage http://github.com/igarnier/prbnmcn-ucb1)
